# robocup-code

./: README.md
pal_smach_utils/: CMakeLists.txt  mainpage.dox  manifest.xml
robocup_stacks/furniture_detector_service/: CMakeLists.txt  ROS_NOBUILD  mainpage.dox  manifest.xml
robocup_stacks/furniture_detector_service/include/: furniture_detector_service.h  furniture_scanner.h
robocup_stacks/furniture_detector_service/launch/: furniture_detector_service.launch
robocup_stacks/furniture_detector_service/src/: furniture_detector_service.cpp  furniture_scanner.cpp
robocup_stacks/furniture_detector_service/srv/: FurnitureDetection.srv
robocup_stacks/iri/iri_bow_object_detector/src/ehbsw/: CMakeLists.txt  Makefile  ehbsw.hpp  ehbsw_if_py.cpp  ehbsw_if_py.i
robocup_stacks/iri/iri_door_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
robocup_stacks/iri/iri_door_detector/action/: FindADoor.action
robocup_stacks/iri/iri_door_detector/cfg/: closed_door_detector_alg_config.cfg  closed_door_detector_alg_config.cfgc  door_cloud_alg_config.cfg  door_cloud_alg_config.cfgc  door_detector_actions_alg_config.cfg  door_detector_actions_alg_config.cfgc  open_door_detector_alg_config.cfg  open_door_detector_alg_config.cfgc
robocup_stacks/iri/iri_door_detector/cfg/cpp/iri_closed_door_detector/: ClosedDoorDetectorConfig.h
robocup_stacks/iri/iri_door_detector/cfg/cpp/iri_door_cloud/: DoorCloudConfig.h
robocup_stacks/iri/iri_door_detector/cfg/cpp/iri_door_detector/: ClosedDoorDetectorConfig.h  DoorCloudConfig.h  DoorDetectorActionsConfig.h  OpenDoorDetectorConfig.h
robocup_stacks/iri/iri_door_detector/cfg/cpp/iri_door_detector_actions/: DoorDetectorActionsConfig.h
robocup_stacks/iri/iri_door_detector/docs/: ClosedDoorDetectorConfig-usage.dox  ClosedDoorDetectorConfig.dox  ClosedDoorDetectorConfig.wikidoc  DoorCloudConfig-usage.dox  DoorCloudConfig.dox  DoorCloudConfig.wikidoc  DoorDetectorActionsConfig-usage.dox  DoorDetectorActionsConfig.dox  DoorDetectorActionsConfig.wikidoc  OpenDoorDetectorConfig-usage.dox  OpenDoorDetectorConfig.dox  OpenDoorDetectorConfig.wikidoc
robocup_stacks/iri/iri_door_detector/include/: closed_door_detector_alg.h  closed_door_detector_alg_node.h  door_cloud_alg.h  door_cloud_alg_node.h  door_detector_actions_alg.h  door_detector_actions_alg_node.h  open_door_detector_alg.h  open_door_detector_alg_node.h
robocup_stacks/iri/iri_door_detector/launch/: door_detector.launch  open_the_door.launch  openni_door_detector.launch  openni_door_detector_no_collision.launch  reem_full_simulation.launch  see_wait_n_walk.launch
robocup_stacks/iri/iri_door_detector/msg/: FindADoorAction.msg  FindADoorActionFeedback.msg  FindADoorActionGoal.msg  FindADoorActionResult.msg  FindADoorFeedback.msg  FindADoorGoal.msg  FindADoorResult.msg
robocup_stacks/iri/iri_door_detector/msg_gen/lisp/: FindADoorAction.lisp  FindADoorActionFeedback.lisp  FindADoorActionGoal.lisp  FindADoorActionResult.lisp  FindADoorFeedback.lisp  FindADoorGoal.lisp  FindADoorResult.lisp  _package.lisp  _package_FindADoorAction.lisp  _package_FindADoorActionFeedback.lisp  _package_FindADoorActionGoal.lisp  _package_FindADoorActionResult.lisp  _package_FindADoorFeedback.lisp  _package_FindADoorGoal.lisp  _package_FindADoorResult.lisp  iri_door_detector-msg.asd
robocup_stacks/iri/iri_door_detector/smach_action_clients/: Open_The_Door.py  See_Wait_N_Walk.py
robocup_stacks/iri/iri_door_detector/src/: closed_door_detector_alg.cpp  closed_door_detector_alg_node.cpp  door_cloud_alg.cpp  door_cloud_alg_node.cpp  door_detector_actions_alg.cpp  door_detector_actions_alg_node.cpp  open_door_detector_alg.cpp  open_door_detector_alg_node.cpp
robocup_stacks/iri/iri_opencv_filters/: CMakeLists.txt  mainpage.dox  manifest.xml
robocup_stacks/iri/iri_opencv_filters/cfg/: bitwise_and_alg_config.cfg  bitwise_and_alg_config.cfgc  fill_holes_alg_config.cfg  fill_holes_alg_config.cfgc  floodfill_segmentation_alg_config.cfg  floodfill_segmentation_alg_config.cfgc  median_blur_alg_config.cfg  median_blur_alg_config.cfgc  morphological_op_alg_config.cfg  morphological_op_alg_config.cfgc  remove_background_alg_config.cfg  remove_background_alg_config.cfgc  remove_border_alg_config.cfg  remove_border_alg_config.cfgc  remove_small_regions_alg_config.cfg  remove_small_regions_alg_config.cfgc
robocup_stacks/iri/iri_opencv_filters/docs/: BitwiseAndConfig-usage.dox  FillHolesConfig-usage.dox  FloodfillSegmentationConfig-usage.dox  FloodfillSegmentationConfig.dox  FloodfillSegmentationConfig.wikidoc  MedianBlurConfig-usage.dox  MedianBlurConfig.dox  MedianBlurConfig.wikidoc  MorphOpenConfig-usage.dox  MorphOpenConfig.dox  MorphOpenConfig.wikidoc  MorphologicalOpConfig-usage.dox  MorphologicalOpConfig.dox  MorphologicalOpConfig.wikidoc  RemoveBackgroundConfig-usage.dox  RemoveBackgroundConfig.dox  RemoveBackgroundConfig.wikidoc  RemoveBorderConfig-usage.dox  RemoveBorderConfig.dox  RemoveBorderConfig.wikidoc  RemoveSmallRegionsConfig-usage.dox  RemoveSmallRegionsConfig.dox  RemoveSmallRegionsConfig.wikidoc
robocup_stacks/iri/iri_opencv_filters/include/: bitwise_and_alg.h  bitwise_and_alg_node.h  fill_holes_alg.h  fill_holes_alg_node.h  floodfill_segmentation_alg.h  floodfill_segmentation_alg_node.h  median_blur_alg.h  median_blur_alg_node.h  morphological_op_alg.h  morphological_op_alg_node.h  remove_background_alg.h  remove_background_alg_node.h  remove_border_alg.h  remove_border_alg_node.h  remove_small_regions_alg.h  remove_small_regions_alg_node.h
robocup_stacks/iri/iri_opencv_filters/launch/: border_floodfill_median_open.launch
robocup_stacks/iri/iri_opencv_filters/src/: bitwise_and_alg.cpp  bitwise_and_alg_node.cpp  fill_holes_alg.cpp  fill_holes_alg_node.cpp  floodfill_segmentation_alg.cpp  floodfill_segmentation_alg_node.cpp  median_blur_alg.cpp  median_blur_alg_node.cpp  morphological_op_alg.cpp  morphological_op_alg_node.cpp  remove_background_alg.cpp  remove_background_alg_node.cpp  remove_border_alg.cpp  remove_border_alg_node.cpp  remove_small_regions_alg.cpp  remove_small_regions_alg_node.cpp
(+2874 files in other folders)
