# Pre-requisites about cmake itself
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")
SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../src/iri_bow_object_detector/)

SET_SOURCE_FILES_PROPERTIES(ehbsw_if_py.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(example.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(ehbsw python ehbsw_if_py.i ehbsw_if_py.cpp ehbsw.hpp)
SWIG_LINK_LIBRARIES(ehbsw ${PYTHON_LIBRARIES})
